Security was added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/sb_student
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_student
 spring.datasource.username=postgres
 spring.datasource.password=***
